Corrections after Mihelj's review

--- a/Slike/follow_ramp_tq.tex
+++ b/Slike/follow_ramp_tq.tex
@@ -8,6 +8,6 @@
 	{
 		\includegraphics[trim={0 0cm 0 0cm},scale=0.5]{./Slike/follow_ramp_500hz_tq_err.eps}
 	}
-	\caption{Odziv vrha robota po \textit{z} osi na signal pozicije trapezne oblike pri dveh razli\v{c}nih končnih hitrostih za vzor\v{c}no frekvenco pri navornem vodenju.}
+	\caption{Odziv vrha robota po \textit{z} osi na signal pozicije trapezne oblike pri dveh razli\v{c}nih kon\v{c}nih hitrostih za vzor\v{c}no frekvenco pri navornem vodenju.}
 	\label{fig:follow_ramp_tq}
 \end{figure}
