--- a/Slike/pc_zadaj_labels.tex
+++ b/Slike/pc_zadaj_labels.tex
@@ -1,6 +1,6 @@
 \begin{figure}
 	\centering
 	\includegraphics[scale = 0.5]{./Slike/pc_zadaj_labels.eps}
-	\caption{Osebni ra\v{c}unalnik na katerem je bil razvit stre\v{z}nik. Na sliki vidimo zadnji del ra\v{c}unalnika kjer so priklju\v{c}ki za ARCNET omre\v{z}je ter JR3 senzor.}
+	\caption{Osebni ra\v{c}unalnik na katerem je bil razvit stre\v{z}nik. Na sliki vidimo zadnji del ra\v{c}unalnika, kjer so priklju\v{c}ki za ARCNET omre\v{z}je ter JR3 senzor.}
 	\label{fig:pc_zadaj_labels}
 \end{figure}
