--- a/Slike/torque_follow_step.tex
+++ b/Slike/torque_follow_step.tex
@@ -1,13 +1,13 @@
 \begin{figure}
 	\centering
-	\subfigure[Odziv na stopnico pri vzor\v{c}nem \v{c}asu 100 Hz]
+	\subfigure[Odziv na stopnico pri vzor\v{c}ni frekvenci 100 Hz]
 	{
 		\includegraphics[trim={0 0cm 0 0cm},scale=0.5]{./Slike/follow_step_100hz_tq.eps}
 	}
-	\subfigure[Odziv na stopnico pri vzor\v{c}nem \v{c}asu 500 Hz]
+	\subfigure[Odziv na stopnico pri vzor\v{c}ni frekvenci 500 Hz]
 	{
 		\includegraphics[trim={0 0cm 0 0cm},scale=0.5]{./Slike/follow_step_500hz_tq.eps}
 	}
-	\caption{Odzivi tretjega sklepa na signal stopnice pri razli\v{c}nih oja\v{c}anjih in razli\v{c}nih vzor\v{c}nih \v{c}asu.}
+	\caption{Odzivi tretjega sklepa na signal stopnice pri razli\v{c}nih oja\v{c}anjih in razli\v{c}nih vzor\v{c}nih frekvencah.}
 	\label{fig:torque_follow_step}
 \end{figure}
