--- a/Tabele/udp-reply.tex
+++ b/Tabele/udp-reply.tex
@@ -6,7 +6,7 @@
 		\hline
 		Zap. \v{s}t. &  Dol\v{z}ina& Opis podatka & Tip podatka\\ \hline
 		0 & $7$ & Kontrolni bajt za posamezen motor & char \\
-		7 & $7$ & Trenuten kot v sklepu & float \\
+		7 & $7$ & Trenutni kot v sklepu & float \\
 		35 & $7$ & Trenutni proizveden navor v sklepu & signed short int \\
 		63 & $6$ & Izmerjene sile in navori na JR3 & float\\
 		73 - 111 & $38$ & Rezerviran prostor & float\\
