--- a/literatura.bib
+++ b/literatura.bib
@@ -104,9 +104,9 @@
 }
 
 @book{mihelj_hapt,
-	title={Vodenje robotov},
+	title={Hapti?ni roboti},
 	author={Mihelj, Matja\v{z}},
-	year={2011},
+	year={2007},
 	publisher={Univerza v Ljubljani, Zalo{\v{z}}ba FE in FRI},
 	address = {Ljubljana}
 }
