--- a/Slike/admitance_step.tex
+++ b/Slike/admitance_step.tex
@@ -22,14 +22,14 @@
 
 \begin{figure}
 	\centering
-	\subfigure[Odziv na stopnico pri vzor\v{c}nem \v{c}asu 100 Hz]{%
+	\subfigure[Odziv na stopnico pri vzor\v{c}ni frekvenci 100 Hz]{%
 		\includegraphics[scale=0.5]{./Slike/figure_0_hz_100dt.eps}
 		\label{fig:admitance_step_100}}
 	\quad
-	\subfigure[Odziv na stopnico pri vzor\v{c}nem \v{c}asu 500 Hz]{%
+	\subfigure[Odziv na stopnico pri vzor\v{c}ni frekvenci 500 Hz]{%
 		\includegraphics[scale=0.5]{./Slike/figure_0_hz_5.eps}
 		\label{fig:admitance_step_500}}
 
-	\caption{Odziv robota pri admitan\v{c}nem vodenju na signal stopnice pri vzor\v{c}nem \v{c}asu 100 Hz in 500 Hz .}
+	\caption{Odziv robota pri admitan\v{c}nem vodenju na signal stopnice pri vzor\v{c}nih frekvencah 100 Hz in 500 Hz .}
 	\label{fig:admitance_step}
 \end{figure}
