--- a/Slike/follow_ramp_vel.tex
+++ b/Slike/follow_ramp_vel.tex
@@ -8,6 +8,6 @@
 	{
 		\includegraphics[trim={0 0cm 0 0cm},scale=0.5]{./Slike/follow_ramp_500hz_vel_err.eps}
 	}
-	\caption{Odziv vrha robota po \textit{z} osi na signal pozicije trapezne oblike pri dveh razli\v{c}nih kon\v{c}nih hitrostih za vzor\v{c}no frekvenco 100 Hz in 500 Hz pri hitrostnem vodenju.}
+	\caption{Odziv vrha robota po \textit{z} osi na signal pozicije trapezne oblike pri dveh razli\v{c}nih kon\v{c}nih hitrostih za vzor\v{c}ni frekvenci 100 Hz in 500 Hz pri hitrostnem vodenju.}
 	\label{fig:follow_ramp_vel}
 \end{figure}
