--- a/magistrska_timotej_gaspar.tex
+++ b/magistrska_timotej_gaspar.tex
@@ -46,7 +46,8 @@
 %*************************** ZAHVALA ************************************
 \zahvala 
 
-Zahvala gre somentorju Leonu Žlajpahu za pomoè z iskušnjami, znanjem ter dobrimi nasveti.
+Zahvalil se bi mentorju za podporo pri izvedbi naloge.
+Zahvalil bi se tudi somentorju Leonu Žlajpahu za pomoè z iskušnjami, znanjem ter dobrimi nasveti.
 Zahvalil se bi rad staršem za popolno podporo pri študiju, bratu, ker me je motiviral èeprav tega ni vedel ter partnerki, ker je vedela katere besede izreèi v katerem trenutku.
 
 
