--- a/Slike/impedance_control.tex
+++ b/Slike/impedance_control.tex
@@ -1,6 +1,6 @@
 \begin{figure}[!h]
 	\centering
-	\includegraphics[trim={0 0cm 0 0cm},scale=0.25]{./Slike/impedance_control.png}
+	\includegraphics[width=\textwidth]{./Slike/impedance_control.eps}
 	\caption{\simulink shema regulatorja sile in pozicije za impedan\v{c}no vodenje.}
 	\label{fig:impedance_control_sim}
 \end{figure}
