--- a/Slike/notranje_koordinate_vel.tex
+++ b/Slike/notranje_koordinate_vel.tex
@@ -1,6 +1,6 @@
 \begin{figure}[]
 	\centering
-	\includegraphics[trim={0 0cm 0 0cm},scale=0.25]{./Slike/notranje_koordinate_vel.png}
+	\includegraphics[width=\textwidth]{./Slike/notranje_koordinate_vel.eps}
 	\caption{\simulink shema za vodenje v notranjih koordinatah v hitrostnem na\v{c}inu.}
 	\label{fig:notranje_koordinate_vel}
 \end{figure}
