--- a/Slike/simulink_vel_tq_control.tex
+++ b/Slike/simulink_vel_tq_control.tex
@@ -2,11 +2,11 @@
 	\centering
 	\subfigure[\simulink shema za hitrostne vodenje]
 	{
-		\includegraphics[trim={0 0cm 0 0cm},scale=0.2]{./Slike/velocity_control.png}
+		\includegraphics[width=\textwidth]{./Slike/velocity_control.eps}
 	}
 	\subfigure[\simulink shema za navorno vodenje]
 	{
-		\includegraphics[trim={0 0cm 0 0cm},scale=0.2]{./Slike/torque_control.png}
+		\includegraphics[width=\textwidth]{./Slike/torque_control.eps}
 	}
 	\caption{\simulink shemi za vodenje robota PA-10 po prostoru naloge.}
 	\label{fig:simulink_vel_tq_control}
