--- a/Slike/zunanje_koordinate_tq.tex
+++ b/Slike/zunanje_koordinate_tq.tex
@@ -1,6 +1,6 @@
 \begin{figure}
 	\centering
-	\includegraphics[trim={0 0cm 0 0cm},scale=0.25]{./Slike/zunanje_koordinate_tq.png}
+	\includegraphics[width=\textwidth]{./Slike/zunanje_koordinate_tq.eps}
 	\caption{\simulink shema regulatorja pozicije v navornem na\v{c}inu.}
 	\label{fig:zunanje_koordinate_tq}
 \end{figure}
