--- a/Slike/zunanje_koordinate_vel.tex
+++ b/Slike/zunanje_koordinate_vel.tex
@@ -1,6 +1,6 @@
 \begin{figure}[!h]
 	\centering
-	\includegraphics[trim={0 0cm 0 0cm},scale=0.25]{./Slike/zunanje_koordinate_vel.png}
+	\includegraphics[width=\textwidth]{./Slike/sim_zunanje_koordinate_vel.eps}
 	\caption{\simulink shema regulatorja pozicije za vodenje robota v zunanjih koordinatah v hitrostnem na\v{c}inu.}
 	\label{fig:zunanje_koordinate_vel}
 \end{figure}
