--- a/literatura.bib
+++ b/literatura.bib
@@ -53,7 +53,7 @@
 
 @misc{arc_doc,
 	author = "ARCNET Trade Association",
-	title = "{ARCNET  ?  An Embedded Real-Time Network}",
+	title = "{ARCNET - An Embedded Real-Time Network}",
 	howpublished = "Dosegljivo: \url{http://www.arcnet.com/abtarcs.htm}",
 	note = "[Dostopano: 2. 7. 2015]"
 }
@@ -67,7 +67,7 @@
 }
 
 @book{miljavec_stroji,
-	title={Elektri?ni stroji: temeljna znanja},
+	title={Elektri\v{c}ni stroji: temeljna znanja},
 	author={Miljavec, Damjan and Jereb, Peter},
 	year={2008},
 	publisher={Univerza v Ljubljani, Zalo{\v{z}}ba FE in FRI},
@@ -104,7 +104,7 @@
 }
 
 @book{mihelj_hapt,
-	title={Hapti?ni roboti},
+	title={Hapti\v{c}ni roboti},
 	author={Mihelj, Matja\v{z}},
 	year={2007},
 	publisher={Univerza v Ljubljani, Zalo{\v{z}}ba FE in FRI},
@@ -143,7 +143,6 @@
 	year={2009},
 }
 
-The EvolutionOfRobotics
 
 @article{garcia_evolutionrob,
 	title={The Evolution of Robotics Research},
@@ -164,8 +163,8 @@ The EvolutionOfRobotics
 
 @article{omrcen_jr3,
 	title={Meritev gibanja kolena z industrijskim robotom - avtomatska kompenzacija gravitacije prijemala},
-	author={Omr?en, Damir and Nemec, Bojan},
-	journal={Strojni?ki vestnik},
+	author={Omr\v{c}en, Damir and Nemec, Bojan},
+	journal={Strojni\v{c}ki vestnik},
 	pages={87 - 97},
 	year={2002},
 }
@@ -189,7 +188,7 @@ The EvolutionOfRobotics
 
 @article{zlajpah_dynamics_red,
 	title={Dynamics of Internal Motion of Redundant Manipulators},
-	author={Leon ?lajpah},
+	author={Leon \v{c}lajpah},
 	journal={IEEE},
 	year={1997},
 	pages={95 - 100},
@@ -231,7 +230,6 @@ The EvolutionOfRobotics
 @article{mhi_pa10,
 	title={Mitsubishi Clean Room Robot},
 	author={Mitsubishi Heavy Industries Ltd.},
-	journal={Seminarska naloga},
 	year={2003},
 }
 
