--- a/Slike/simulink-pa-10-inside.tex
+++ b/Slike/simulink-pa-10-inside.tex
@@ -1,6 +1,6 @@
 \begin{figure}[!h]
 	\centering
-	\includegraphics[scale=0.2]{./Slike/simulink-pa-10-inside.png}
+	\includegraphics[width=\textwidth]{./Slike/simulink-pa-10-inside.eps}
 	\caption{Vsebina \simulink bloka PA-10 CONTROL za vodenje robota PA-10.}
 	\label{fig:simulink-pa-10-inside}
 \end{figure}
