--- a/magistrska_timotej_gaspar.tex
+++ b/magistrska_timotej_gaspar.tex
@@ -31,7 +31,7 @@
 \delo{Magistrsko delo}
 \date{Ljubljana, 2015}
 \mentor{prof. dr. Matjaž Mihelj}
-\somentor{doc. dr. Leon Žlajpah}
+\somentor{znan. svet. dr. Leon Žlajpah}
 \begin{document}
 
 %------------------------ ZAÈETNI DEL -----------------------------------
