--- a/magistrska_timotej_gaspar.tex
+++ b/magistrska_timotej_gaspar.tex
@@ -11,6 +11,7 @@
 \usepackage[all]{xy}
 \usepackage[Slovene]{babel}    % pravila za slovensko deljenje besed
 \usepackage[pdftex]{UNI-LJ-FE-Diploma} %Stil za diplome na Fakulteti za elektrotehniko (za pdfTeX v MkiTex)
+\usepackage{xmpincl}
 %\usepackage{cite}
 %\usepackage[sort&compress]{natbib}
 \input{./BlockDiagrams/tikzsettings.tex}
